WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154126
Cannot call initializeIndex() if we didn't create the array using tryCreateUninitialized()
https://bugs.webkit.org/show_bug.cgi?id=154126
Summary
Cannot call initializeIndex() if we didn't create the array using tryCreateUn...
Filip Pizlo
Reported
2016-02-11 13:40:55 PST
Patch forthcoming.
Attachments
the patch
(2.56 KB, patch)
2016-02-11 13:41 PST
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-02-11 13:41:40 PST
Created
attachment 271080
[details]
the patch
Filip Pizlo
Comment 2
2016-02-11 14:10:06 PST
Landed in
http://trac.webkit.org/changeset/196437
David Kilzer (:ddkilzer)
Comment 3
2016-07-11 10:17:49 PDT
<
rdar://problem/27279294
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug