Cannot call initializeIndex() if we didn't create the array using tryCreateUninitialized() https://bugs.webkit.org/show_bug.cgi?id=154126

Reviewed by Saam Barati.

* runtime/ArrayPrototype.cpp:
(JSC::arrayProtoFuncSplice):



Canonical link: https://commits.webkit.org/172231@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196437 268f45cc-cd09-0410-ab3c-d52691b4dbfc